--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <section class="main-section">
 
           <div class="image">
-            <img src="images/illustration-woman-online-desktop.svg" alt="">
+            <img class="image__desktop" src="images/illustration-woman-online-desktop.svg" alt="">
+            <img class="image__mobile" src="images/illustration-woman-online-mobile.svg" alt="">
           </div>
 
           <div class="content hide-scroll">
@@ -106,7 +107,7 @@
     <footer>
       <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#" target="_blank">Alexei</a>.
+        Coded by <a href="https://www.frontendmentor.io/profile/Batareika007" target="_blank">Alexei</a>.
       </div>
     </footer>
   
