added alt and animation to text

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <section class="main-section">
 
           <div class="image">
-            <img class="image__desktop" src="images/illustration-woman-online-desktop.svg" alt="">
-            <img class="image__mobile" src="images/illustration-woman-online-mobile.svg" alt="">
+            <img class="image__desktop" src="images/illustration-woman-online-desktop.svg" alt="woman online">
+            <img class="image__mobile" src="images/illustration-woman-online-mobile.svg" alt="woman online">
           </div>
 
           <div class="content hide-scroll">
@@ -57,7 +57,7 @@
               <li>
                 <details open class="content__text">
                   <summary class="content__header">
-                    <span>What is the maximum file upload size?</span><img src="images/icon-arrow-down.svg">
+                    <span>What is the maximum file upload size?</span><img src="images/icon-arrow-down.svg" alt="">
                   </summary>
                   <p>
                     No more than 2GB. All files in your account must fit your allotted storage space.
@@ -68,7 +68,7 @@
               <li>
                 <details class="content__text">
                   <summary class="content__header">
-                    <span>How do I reset my password?</span><img src="images/icon-arrow-down.svg">
+                    <span>How do I reset my password?</span><img src="images/icon-arrow-down.svg" alt="">
                   </summary>
                   <p>
                     Click “Forgot password” from the login page or “Change password” from your profile page.
@@ -80,7 +80,7 @@
               <li>
                 <details class="content__text">
                   <summary class="content__header">
-                    <span>Can I cancel my subscription?</span><img src="images/icon-arrow-down.svg">
+                    <span>Can I cancel my subscription?</span><img src="images/icon-arrow-down.svg" alt="">
                   </summary>
                   <p>
                     Yes! Send us a message and we’ll process your request no questions asked.
@@ -91,7 +91,7 @@
               <li>
                 <details class="content__text">
                   <summary class="content__header">
-                    <span>Do you provide additional support?</span><img src="images/icon-arrow-down.svg">
+                    <span>Do you provide additional support?</span><img src="images/icon-arrow-down.svg" alt="">
                   </summary>
                   <p>
 
