--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <li>
                 <details class="content__text">
                   <summary class="content__header"> <span> How many team members can I invite?</span><img
-                      src="images/icon-arrow-down.svg"></summary>
+                      src="images/icon-arrow-down.svg" alt=""></summary>
                   <p>
                     You can invite up to 2 additional users on the Free plan. There is no limit on
                     team members for the Premium plan.
